- Tree window : scores are highlighted when the moves have good or bad results
   * On average white should score 53.8%
   Parameter : set scoreHighlight_WhiteExpectedScoreBonus 3.8 ; # on average white achieves a score of 53.8
   * Check only if at least 15 games played
   Parameter set scoreHighlight_MinGames 15
   * Highlight score if score is -3 % (red) or +3% (green) from expected score
   Parameter set scoreHighlight_Margin 3.0 ; # if +/- this value, something special happened
- updated spanish translation (thanks to Benigno Hernández)
- [inhibited] support for online endgame tablebases (up to 6 men tablebases) for Scid PC and Scid Pocket : sites like http://k4it.de and Schredder does not allow queries on their site from other chess applications (even if there is no particular mechanism preventing this). So the code is commented out until a free site offering this service is found.
- MacOS : support for drag and drop of files (thanks to Israel Chauca)
- New menu entry in Maintenance menu to repair corrupted bases (equivalent to "scidt -N" in command line)

[January 2009 ??]

scid-3.6.26
-----------
- CC:
  * Fix: Variant games were not removed correctly from the inbox on
  Windows, recode more forwared procedure
- Confirm / discard dialog box : rewritten to look a little bit better
- photos of players are now also searched in Scid shared directory (under photos directory) (Thanks to Mikhail Kalenkov)
- if "Strip out coloured square/arrow codes" is checked and PGN display is in color, comments are no longer surrounded with {} 
- PGN window : removed extra lines between moves and comments
- After closing a base, the current game is reseted
- After game searches (header, material or board), the first game of the filter is automatically loaded
- Fix : trying to repair a base already opened is now prohibited
- Fix : trying to play a tactical game with Phalanx absent would pop an uncaught exception (translation missing)