@@ -576,3 +576,5 @@ scid-3.6.26
 - After game searches (header, material or board), the first game of the filter is automatically loaded
 - Fix : trying to repair a base already opened is now prohibited
 - Fix : trying to play a tactical game with Phalanx absent would pop an uncaught exception (translation missing)
+- Partial support for Tk 8.5 added
+- Play on internet : a digital clock is displayed inside the analog clock (seems required for blitz games)
